[metadata]
name = water
version = attr: ci.version
author = Mathieu Imfeld
author_email = imfeldma+9jqerw@gmail.com
maintainer = Mathieu Imfeld
maintainer_email = imfeldma+9jqerw@gmail.com
long_description = file: README.md
license = MIT
url = https://gitlab.com/mrmatorg/water
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    rich~=12.4.1
    pydantic~=1.9.1
    pyyaml~=6.0
    psycopg2-binary~=2.9.3

[options.entry_points]
console_scripts =
    water = water.cli:main

[options.packages.find]
exclude =
    ci
